# repo_analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  brunch-config.js  package-lock.json  package.json
backend/: Cargo.toml  Makefile  test.sh
backend/src/: main.rs
backend/src/analyzer/: mod.rs
backend/src/web/: mod.rs  tests.rs
elm/: App.elm  Main.elm  elm-package.json
elm/DiffAnalyzer/: Rest.elm  State.elm  Types.elm  View.elm
elm/DiffAnalyzer/FileMenu/: Rest.elm  State.elm  Types.elm  View.elm
elm/DiffAnalyzer/Graph/: Rest.elm  State.elm  Types.elm  View.elm
frontend/: Main.elm  Makefile  elm-package.json  package.json  webpack.config.js
frontend/DiffAnalyzer/: State.elm  Style.elm  Types.elm  View.elm
frontend/DiffAnalyzer/Chart/: Rest.elm  State.elm  Types.elm  View.elm
frontend/DiffAnalyzer/FileMenu/: Rest.elm  State.elm  Types.elm  View.elm
frontend/DiffAnalyzer/Graph/: Port.elm  Rest.elm  State.elm  Types.elm  View.elm
frontend/src/: index.html  index.js
frontend/src/elm/: Main.elm
frontend/src/elm/DiffAnalyzer/: State.elm  Types.elm  View.elm
frontend/src/elm/DiffAnalyzer/Chart/: Port.elm  Rest.elm  State.elm  Types.elm
frontend/src/elm/DiffAnalyzer/FileMenu/: Rest.elm  State.elm  View.elm
frontend/static/: index.html
frontend/static/js/: chart_helpers.js
js/: app.js
src/: main.rs
src/analyzer/: mod.rs  tests.rs
src/analyzer/tests/: analyzer_test.rs
src/web/: mod.rs  tests.rs
static/: index.html
templates/: index.html.tera
