[package]
name = "repo_analyzer"
version = "0.1.0"
authors = ["Luc Tielen <luc.tielen@kabisa.nl>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"
rocket_contrib = { version = "0.3.12", "default-features" = false, features = ["json"] }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

git2 = "0.7.1"
walkdir = "2"
